# My_isaacsim_project

./: .gitignore  Next_Task.md  README.md
docs/: ARCHITECTURE.md  ENV_PROJECT_KNOWLEDGE.md  TASK_RECORD.md
ros2_ws/: README.md
ros2_ws/scripts/: run_moveit_isaac_test.py  run_mtc_demo.py
ros2_ws/src/manipulation_interface/: CMakeLists.txt  README_BRIDGE.md  README_MOVEIT_CONTROL.md  package.xml
ros2_ws/src/manipulation_interface/launch/: bridge.launch.py
ros2_ws/src/manipulation_interface/src/: arm_trajectory_bridge.py  manipulation_interface_node.cpp
ros2_ws/src/moveit_config/: README.md
ros2_ws/src/moveit_mtc_pick_place_demo/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/moveit_mtc_pick_place_demo/config/: mtc_launch_defaults.yaml  mtc_pick_place.rviz  pick_place_params.yaml
ros2_ws/src/moveit_mtc_pick_place_demo/launch/: mtc_pick_place_demo.launch.py
ros2_ws/src/moveit_mtc_pick_place_demo/src/: mtc_pick_place_demo.cpp
ros2_ws/src/moveit_robot_config/: .setup_assistant  MOVEIT_ISAAC_INTEGRATION_CHANGELOG.md  README.md  package.xml
ros2_ws/src/moveit_robot_config/config/: initial_positions.yaml  isaac_sim_moveit_defaults.yaml  joint_limits.yaml  kinematics.yaml  mobile_base_with_franka copy.srdf  mobile_base_with_franka.ros2_control.xacro  mobile_base_with_franka.srdf  mobile_base_with_franka.urdf copy.xacro  mobile_base_with_franka.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
ros2_ws/src/moveit_robot_config/launch/: demo.launch.py  isaac_sim_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/navigation_interface/: CMakeLists.txt  package.xml
ros2_ws/src/navigation_interface/src/: navigation_interface_node.cpp
ros2_ws/src/perception/: CMakeLists.txt  package.xml
ros2_ws/src/perception/src/: perception_node.cpp
ros2_ws/src/robot_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_bringup/launch/: bringup.launch.py
ros2_ws/src/robot_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_description/launch/: robot_description_launch.py
ros2_ws/src/robot_description/urdf/: arm_only_franka.urdf  combined_car_franka.urdf  combined_car_franka_change.urdf  composite_robot.urdf copy.xacro
ros2_ws/src/tf_manager/: CMakeLists.txt  package.xml
ros2_ws/src/tf_manager/src/: tf_manager_node.cpp
sim/force_control/: README.md  franka_force_control_standalone.py
sim/launch/: README.md  grasp_metric_evaluator.py  run_combined_car_franka_headless.py  run_combined_car_franka_headless_guide.md
sim/launch/config/: sim_default.yaml
