<?xml version="1.0"?>
<package format="3">
  <name>moveit_mtc_pick_place_demo</name>
  <version>0.1.0</version>
  <description>MTC pick and place demo adapted for mobile_base_with_franka</description>

  <maintainer email="exam@exam.com">test</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <exec_depend>moveit_task_constructor_visualization</exec_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <exec_depend>moveit_robot_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
