<?xml version="1.0"?>
<package format="3">
  <name>navigation_interface</name>
  <version>0.0.1</version>
  <description>Interface node between Nav2 and higher-level mission planner.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
