<?xml version="1.0"?>
<package format="3">
  <name>tf_manager</name>
  <version>0.0.1</version>
  <description>Central TF management utilities: map->odom->base_link->arm_base->camera_link handling.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
